--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ body {
     line-height: 1.6;
 }
 
+section {
+    padding: 5em 2em;
+}
+
 img {
     display: block;
     max-width: 100%;
@@ -55,7 +59,7 @@ strong { font-weight: var(--fw-bold) }
 h1,
 h2,
 h3 {
-    line-height: 1.1;
+    line-height: 1;
     margin: 0;
 }
 
@@ -84,4 +88,33 @@ h3 { font-size: : var(--fs-h3) }
 .section__subtitle--about {
     background: var(--clr-accent);
     font-family: var(--ff-secondary);
+    margin-bottom: 1em
+}
+
+/* header */
+
+nav { display: none;}
+
+/* intro section */
+
+.intro {
+    position: relative;
+}
+
+@media (min-width: 600px) {
+    .intro {
+        display: grid;
+        width: min-content;
+        margin: 0 auto;
+        grid-column-gap: 1em;
+        grid-template-areas:
+        "img title"
+        "img-subtitle";
+        grid-template-columns: min-content max-content;
+    }
+}
+
+.intro__img {
+    grid-area: img;
+    min-width: 250px;
 }
